--- a/MyLessonPlan.xcodeproj/xcshareddata/xcschemes/MyLessonPlan.xcscheme
+++ b/MyLessonPlan.xcodeproj/xcshareddata/xcschemes/MyLessonPlan.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "1C93B89724B97DAC009C0458"
+               BuildableName = "MyLessonPlanUITests.xctest"
+               BlueprintName = "MyLessonPlanUITests"
+               ReferencedContainer = "container:MyLessonPlan.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
